# rust-mcp

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml  publish.yml  release.yml
src/: config.rs  lib.rs  main.rs  s3_client.rs  server.rs
