# Copyright 2024 RustFS Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rustfs-mcp"
version = "0.0.5"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rustfs/mcp"
rust-version = "1.93.0"
authors = ["RustFS Team"]
homepage = "https://rustfs.com"
description = "RustFS MCP (Model Context Protocol) Server"
keywords = ["mcp", "s3", "aws", "rustfs", "server"]
categories = ["development-tools", "web-programming"]
documentation = "https://docs.rs/rustfs-mcp/latest/rustfs_mcp/"

[[bin]]
name = "rustfs-mcp"
path = "src/main.rs"

[lints.rust]
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
all = "warn"
needless_borrow = "warn"
redundant_closure = "warn"

[dependencies]
# AWS SDK for S3 operations
aws-sdk-s3 = { version = "1.129.0", default-features = false, features = ["sigv4a", "default-https-client", "rt-tokio"] }
aws-smithy-http-client = { version = "1.1.12", default-features = false, features = ["default-client", "rustls-aws-lc"] }

# Async runtime and utilities
tokio = { version = "1.52.1", default-features = false, features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "io-uring"] }

# MCP SDK with macros support
rmcp = { version = "1.5.0", default-features = false, features = ["server", "transport-io", "macros"] }

# Command line argument parsing
clap = { version = "4.6.1", features = ["derive", "env"] }

# Serialization (still needed for S3 data structures)
serde = { version = "1.0.228", features = ["derive"] }
schemars = "1.2.1"

# Error handling
anyhow = { version = "1.0.102" }

# Logging
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# File handling and MIME type detection
mime_guess = { version = "2.0.5" }

[lib]
doctest = false

[dev-dependencies]
serde_json = { version = "1.0.149" }
